Added javadoc